--- a/.github/workflows/full-reset.yml
+++ b/.github/workflows/full-reset.yml
@@ -1,7 +1,5 @@
-name: daily
+name: full-reset
 on:
-   schedule:
-      - cron: '0 12 * 3-10 *' # https://crontab.guru
    workflow_dispatch:
 jobs:
    build:
@@ -18,8 +16,8 @@ jobs:
             run: |
                python -m pip install --upgrade pip
                pip install -r requirements.txt
-         -  name: daily scrape
+         -  name: full reset
             env:
                MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
             run: |
-               python -c 'import actions; actions.daily();'
+               python -c 'import actions; actions.full_reset();'
