--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 dnspython==2.4.1
-matplotlib==3.7.2
 pandas==2.0.3
 pymongo==3.12.0
 pymongoarrow==1.0.2
 requests==2.31.0
 scikit-learn==1.2.2
 shiny==0.5.0
+shinyswatch==0.3.1
